adapting code for docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,18 @@ version: "3"
 services:
 
   py4jserver:
-    build: py4jserver
+    build:
+      context: ./
+      dockerfile: py4jserver/Dockerfile
     container_name: "py4jserver"
-    ports:
-      - "25333:25333"
 
   jupyter:
     build: notebooks
     container_name: "notebook"
-    volumes:
-      - "./:/home/jovyan/myspace"
     ports:
       - "8888:8888"
+    volumes:
+      - "./:/home/jovyan/myspace"
     environment:
       - JUPYTER_ENABLE_LAB=yes
     links:
